--- a/maxcoin/package.json
+++ b/maxcoin/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.20.0"
+    "@types/mongodb": "^4.0.7",
+    "axios": "^0.20.0",
+    "mongodb": "^5.8.1"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
