--- a/shopper/package.json
+++ b/shopper/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "~1.19.0",
+    "connect-redis": "^7.1.0",
     "cookie-parser": "~1.4.5",
     "express": "~4.17.1",
     "express-session": "^1.17.1",
+    "ioredis": "^5.3.2",
     "mongoose": "^7.4.5",
     "pug": "~3.0.0"
   },
