--- a/maxcoin/package.json
+++ b/maxcoin/package.json
@@ -12,7 +12,8 @@
     "@types/mongodb": "^4.0.7",
     "axios": "^0.20.0",
     "ioredis": "^5.3.2",
-    "mongodb": "^5.8.1"
+    "mongodb": "^5.8.1",
+    "mysql2": "^3.6.0"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
